Fixed layout issue and verse highlighting issue

--- a/src/app/styles/_grid.scss
+++ b/src/app/styles/_grid.scss
@@ -186,8 +186,12 @@ button {
   }
   @include main-grid('screen and (min-width: 320px)', 0, $vw8, $vw4);
   @media screen and (orientation: portrait) {
-    .parent-container {
+    .parent-container,
+    .parent-container.hidden-notes {
       grid-template-columns: 100vw 0;
+      .content-pane > div {
+        width: 100vw;
+      }
     }
   }
 
